--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin-right: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar{
+    background: linear-gradient(to left ,cyan 5%,rgba(32, 29, 29, 0.809));
+    display: flex;
+    align-items: center;
+    margin:0 auto;
+    justify-content: space-between;
+    max-height: 80px;
+    width: 100%;
 }
+
+.navbar h1{
+    font-family: monospace;
+    color:aliceblue;
+    font-size: 45px;
+    text-shadow: 2px 2px 5px;
+}
+
+
+.navbar a{
+    margin: 20px;
+    padding:5px;
+    color:azure;
+    font-size: 30px;
+    text-decoration: none;
+}   
+
+.navbar a:hover{
+    color: rgba(240, 248, 255, 0.671);
+}
+
+.navbar .links{
+    margin-right: 15px;
+    margin: 0;
+    padding: 0;
+    list-style:none;
+}
+
+footer{
+    width:100%;
+    padding: 0.25em;
+    background: linear-gradient(to left,cyan,rgba(32, 29, 29, 0.809));
+    position:fixed;
+    bottom: 0;
+    font-family: monospace;
+    text-shadow: 2px 2px 5px;
+    color:aliceblue;
+}
+
