--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -6,7 +6,7 @@
 
 html{
     font-family:monospace;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
 }
 
 body{
@@ -28,5 +28,47 @@ form {
     flex-direction: column;
     justify-content: space evenly;
     flex-grow: 1;
+    padding-bottom: 1rem;
+}   
 
+a,a:visited{
+    color:aliceblue;
+}
+
+input[type="text"],input[type="password"],button,textarea{
+    font-family:monospace;
+    font-size: 1.1rem;
+    padding:0.25rem;
+    border-radius:20px;
+}
+
+label,button{
+    margin-top:1rem;
+}
+
+button{
+    padding:0.5rem;
+    background-color:rgba(0, 255, 255, 0.709);
+}
+
+.valid {
+    color: limegreen;
+    margin-left: 0.25rem;
+}
+
+.invalid {
+    color: red;
+    margin-left: 0.25rem;
+}
+
+.errmsg {
+    background-color: lightpink;
+    color: firebrick;
+    font-weight: bold;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.line {
+    display: inline-block;
 }
