--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -17,10 +17,14 @@ body{
 section{
     width:100%;
     display:flex;
+    max-width: 420px;
+    min-height: 400px;
     flex-direction: column;
     justify-content: flex-start;
     padding: 1rem;
     background-color:rgba(0,0,0,0.4);
+    align-items: center;
+    border-radius:20px ;
 }
 
 form {
