fixed some styling issues

--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -21,3 +21,11 @@ section{
     border-radius:20px ;
 }
 
+.Register{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; 
+    padding: 1rem 0.5rem;
+}
