--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -76,3 +76,12 @@ button{
 .line {
     display: inline-block;
 }
+ 
+.login{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; 
+    padding: 1rem 0.5rem;
+}
