addes the rest of styling to the register page and stylised the scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,14 @@ footer{
     color:aliceblue;
 }
 
+body::-webkit-scrollbar{
+    width :0.3rem;
+}
+
+body::-webkit-scrollbar-track{
+    background:aliceblue;
+}
+
+body::-webkit-scrollbar-thumb{
+    background:cyan;
+}
