--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -16,7 +16,7 @@ a, a:visited {
 section{
     width:100%;
     display:flex;
-    max-width: 650px;
+    max-width: 450px;
     min-height: 400px;
     flex-direction: column;
     justify-content: flex-start;
@@ -61,14 +61,14 @@ input[type="text"],input[type="password"],button, textarea{
     border-radius: 0.5rem;
     padding: 0.25rem;
     position: relative;
-    bottom: 10px;
+    bottom: -10px;
 }
 
 .instructions > svg{
     margin-right:0.25rem;
 }
 
-.offscreeen{
+.offscreen{
     position: absolute;
     left:-9999px;
 }
